# opengl-with-sdl-and-imgui

./: README.md
engine/application/: application.cpp  application.hpp
engine/application/opengl/: opangl-application.cpp  opangl_application.cpp  opengl-application.hpp  opengl-asset-manager.cpp  opengl-asset-manager.hpp  opengl-gltf.cpp  opengl-gltf.hpp  opengl-imgui.cpp  opengl-imgui.hpp  opengl-material.hpp  opengl-mesh.cpp  opengl-mesh.hpp  opengl-pipeline.cpp  opengl-pipeline.hpp  opengl-renderer.cpp  opengl-renderer.hpp  opengl-shader.cpp  opengl-shader.hpp  opengl-texture.cpp  opengl-texture.hpp  opengl_application.hpp  opengl_asset_manager.hpp  opengl_framebuffer.cpp  opengl_framebuffer.hpp  opengl_gltf.cpp  opengl_gltf.hpp  opengl_imgui.cpp  opengl_imgui.hpp  opengl_mesh.cpp  opengl_mesh.hpp  opengl_pipeline.cpp  opengl_pipeline.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp
engine/application/vulkan/: vulkan_application.cpp  vulkan_application.hpp  vulkan_asset_manager.cpp  vulkan_asset_manager.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_common.cpp  vulkan_common.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_image_view.cpp  vulkan_image_view.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render_context.cpp  vulkan_render_context.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
engine/build-tools/windows/: CMakeLists.txt  cmake-post-build.ps1  compile_shaders.ps1  setup.ps1
engine/build_tools/windows/: CMakeLists.txt  cmake-post-build.ps1  compile_shaders.ps1  setup.ps1
engine/core/: animation-plane.hpp  asset-inventory.cpp  asset-inventory.hpp  asset-manager.hpp  asset_inventory.cpp  asset_inventory.hpp  asset_loader.cpp  asset_loader.hpp  asset_manager.cpp  asset_manager.hpp  asset_manifest.hpp  assets.cpp  assets.hpp  bitmap.cpp  bitmap.hpp  dat.cpp  dat.hpp  engine.cpp  engine.hpp  file_manager.cpp  file_manager.hpp  glm-wrapper.hpp  gltf.cpp  gltf.hpp  input_manager.cpp  input_manager.hpp  internal-ptr.hpp  light-settings.hpp  log.cpp  log.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  perspective-camera.cpp  perspective-camera.hpp  perspective_camera.cpp  platform.cpp  (+19 more)
engine/core/components/: animation-plane.hpp  animation_plane.cpp  animation_plane.hpp  button.cpp  button.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  gltf-renderer.hpp  interface_component.cpp  interface_component.hpp  light.cpp  light.hpp  mesh-renderer.cpp  mesh-renderer.hpp  mesh_renderer.cpp  mesh_renderer.hpp  player_controller.cpp  player_controller.hpp  rect_transform.cpp  rect_transform.hpp  simple_components.hpp  transform.cpp  transform.hpp  ui_button.cpp  ui_button.hpp  ui_image.cpp  ui_image.hpp
engine/core/gui/: environmental_settings_panel.cpp  game_view_panel.hpp  gui.cpp  gui.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  hierarchy_window.cpp  hierarchy_window.hpp  inspector-window.cpp  inspector-window.hpp  inspector_panel.cpp  inspector_panel.hpp  inspector_window.cpp  interface_panel.hpp  layout.cpp  layout.hpp  scene-hierarchy-panel.hpp
engine/core/interfaces/: IComponent.cpp  IComponent.hpp  IWindow.hpp  interface_component.cpp  interface_component.hpp  interface_panel.hpp
engine/core/layout/: app_bar.cpp  app_bar.hpp  environmental_settings_panel.cpp  environmental_settings_panel.hpp  game_view_panel.cpp  game_view_panel.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  interface_panel.hpp  layout.cpp  layout.hpp
engine/core/scene/: environmental_settings.hpp  scene.cpp  scene.hpp  scene_data.hpp
engine/core/wrapper/: graphics_wrapper.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp
engine/utils/: imgui-utils.hpp
main/assets/: README.md
main/assets/gltfs/farm-sim/: scene.gltf
main/assets/gltfs/testbox/: gltftest.gltf
main/assets/gltfs/testbox_reverse/: gltftest.gltf
main/assets/scenes/: defaultconstructor  sample  sample.scene
main/assets/shaders/opengl/: animation.frag  bloom.vert  blur.frag  default.frag  default.vert  deffered-lighting.frag  framebuffer.frag  framebuffer.vert  light-stencil-pass.vert  lit.frag  lit.vert  point-light-pass.vert  simple.frag  simple.vert  ui.frag  ui.vert  unlit.vert
main/assets/shaders/spir_v/: default.frag  default.vert
main/assets/shaders/vulkan/: default.frag  default.vert
main/src/: _clang-format  main.cpp  player.cpp  player.hpp  scene-main.cpp  scene-main.hpp  scene_main.cpp  scene_main.hpp
